--- a/WPF_Main/WPF_Main.csproj
+++ b/WPF_Main/WPF_Main.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Components\Models\Learning_sample.cs" />
     <Compile Include="Components\Service\OpenFileService.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
