--- a/WPF_Main/WPF_Main.csproj
+++ b/WPF_Main/WPF_Main.csproj
@@ -55,6 +55,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Components\Forms\About\About_window.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Components\Forms\LearningSet\LearningSet_window.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -62,6 +70,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Components\Forms\About\About_window.xaml.cs">
+      <DependentUpon>About_window.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Components\Forms\LearningSet\LearningSet_window.xaml.cs">
+      <DependentUpon>LearningSet_window.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\Models\Learning_sample.cs" />
     <Compile Include="Components\Service\OpenFileService.cs" />
