Add MLP and Action on Close button

--- a/WPF_Main/WPF_Main.csproj
+++ b/WPF_Main/WPF_Main.csproj
@@ -78,6 +78,8 @@
       <DependentUpon>LearningSet_window.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\Models\Learning_sample.cs" />
+    <Compile Include="Components\Service\Manager.cs" />
+    <Compile Include="Components\Service\MLP.cs" />
     <Compile Include="Components\Service\OpenFileService.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
