--- a/WPF_Main/WPF_Main.csproj
+++ b/WPF_Main/WPF_Main.csproj
@@ -71,6 +71,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Components\Forms\Testing\Testing_window.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Components\Forms\Training\Training_window.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -95,6 +99,9 @@
       <DependentUpon>LearningSet_window.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\API\LiveParams.cs" />
+    <Compile Include="Components\Forms\Testing\Testing_window.xaml.cs">
+      <DependentUpon>Testing_window.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Components\Forms\Training\Training_window.xaml.cs">
       <DependentUpon>Training_window.xaml</DependentUpon>
     </Compile>
